--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:52:39 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:53:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -294,10 +294,10 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +4
 -2 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout">Patrick Cantlay +6
+      <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 10</td>
+      <td class="greyout">Jon Rahm +6
+-1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -328,8 +328,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Jon Rahm +5
--2 thru 8</td>
+      <td class="greyout">Jon Rahm +6
+-1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -358,8 +358,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
--2 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -396,22 +396,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -6
@@ -444,6 +428,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -6
@@ -470,26 +470,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
--2 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 9</td>
       <td class="greyout">Patrick Cantlay +6
 -2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +6
--2 thru 10</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -502,9 +486,25 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
--2 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 9</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Patrick Cantlay(W) +6
+-2 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -525,34 +525,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -582,9 +566,25 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +5
--2 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,22 +604,6 @@ Not started</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
-      <td class="greyout leftborder">Bubba Watson +8
-E thru 9</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -1
@@ -636,18 +620,18 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">4</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
+      <td>Cameron Smith -6
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
+      <td class="greyout leftborder">Bubba Watson +8
+E thru 9</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -684,14 +668,30 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
       <td>Tiger Woods +9
 +2 thru 8</td>
       <td class="greyout leftborder">Sam Burns
@@ -717,15 +717,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -733,31 +733,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +4
 -2 thru 7</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout leftborder">Daniel Berger +6
+      <td>Daniel Berger +6
 -1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -765,34 +765,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">11</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
+      <td>Patrick Cantlay +6
 -2 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Viktor Hovland(W) +3
-Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 10</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -812,16 +796,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland(W) +3
+Not started</td>
+      <td>Patrick Cantlay +6
+-2 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
       <td>Patrick Cantlay(W) +6
 -2 thru 10</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -829,13 +829,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -845,31 +845,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
       <td>Daniel Berger +6
 -1 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
+      <td>Patrick Cantlay +6
 -2 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
       <td>Patrick Reed +5
 +1 thru 2</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +5
--2 thru 8</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
+      <td>Jon Rahm +6
+-1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 8</td>
       <td>Tony Finau +5
 +1 thru 3</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -1057,8 +1057,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Neville Spillman</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Patrick Cantlay</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
