--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:00:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:01:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,10 +262,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 3</td>
-      <td class="greyout">Patrick Cantlay +6
+      <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 10</td>
+      <td class="greyout">Tony Finau +6
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -700,22 +700,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">8</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +1
-Not started</td>
-      <td>Matthew Fitzpatrick +4
-E thru 4</td>
-      <td>Tony Finau +5
-+1 thru 3</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">9</td>
       <td>Corey Conners(W) -1
@@ -724,10 +708,26 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +3
 -3 thru 8</td>
-      <td>Daniel Berger +6
--1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +6
+      <td>Jon Rahm +6
 -1 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +7
+E thru 9</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">9</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +1
+Not started</td>
+      <td>Matthew Fitzpatrick +4
+E thru 4</td>
+      <td>Tony Finau +6
++2 thru 4</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -850,12 +850,12 @@ Missed Cut</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Daniel Berger +6
--1 thru 8</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +6
+      <td>Jon Rahm +6
 -1 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +7
+E thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Tony Finau +5
-+1 thru 3</td>
       <td>Jon Rahm(W) +6
 -1 thru 9</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
+      <td>Tony Finau +6
++2 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
