--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:00:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:01:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 3</td>
-      <td class="greyout">Patrick Cantlay +6
+      <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 10</td>
+      <td class="greyout">Tony Finau +6
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -285,17 +285,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Tony Finau +5
-+1 thru 3</td>
-      <td class="greyout leftborder">Daniel Berger +6
--1 thru 8</td>
+      <td>Tony Finau +6
++2 thru 4</td>
+      <td class="greyout leftborder">Daniel Berger +7
+E thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -310,8 +310,8 @@ Not started</td>
 -3 thru 8</td>
       <td>Jon Rahm +6
 -1 thru 9</td>
-      <td class="greyout leftborder">Daniel Berger +6
--1 thru 8</td>
+      <td class="greyout leftborder">Daniel Berger +7
+E thru 9</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -332,22 +332,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Tony Finau +5
-+1 thru 3</td>
-      <td>Jon Rahm(W) +6
--1 thru 9</td>
-      <td>Patrick Cantlay +6
--2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">18</td>
       <td>Dustin Johnson +1
@@ -359,6 +343,22 @@ Not started</td>
       <td>Jon Rahm +6
 -1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">19</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Jon Rahm(W) +6
+-1 thru 9</td>
+      <td>Patrick Cantlay +6
+-2 thru 10</td>
+      <td>Tony Finau +6
++2 thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
