--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:01:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:02:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -164,10 +164,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Will Zalatoris +2
+      <td>Russell Henley +2
+-5 thru 9</td>
+      <td class="greyout leftborder">Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +3
--4 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -311,7 +311,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 4</td>
+E thru 5</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -419,7 +419,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Matthew Fitzpatrick +4
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay +6
 -2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -723,7 +723,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td>Matthew Fitzpatrick +4
-E thru 4</td>
+E thru 5</td>
       <td>Tony Finau +6
 +2 thru 4</td>
       <td class="greyout leftborder">Louis Oosthuizen
