--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:12:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:13:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -262,10 +262,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout">Tony Finau +6
+      <td class="greyout leftborder">Tony Finau +6
 +2 thru 4</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -280,8 +280,8 @@ Not started</td>
 -3 thru 9</td>
       <td class="greyout leftborder">Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -294,8 +294,8 @@ Not started</td>
 Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -311,7 +311,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 5</td>
+E thru 6</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -342,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -390,8 +390,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -428,22 +428,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Matthew Fitzpatrick +4
-E thru 5</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -6
@@ -460,6 +444,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Matthew Fitzpatrick +4
+E thru 6</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -6
@@ -472,8 +472,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
 -2 thru 10</td>
-      <td class="greyout">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -486,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay(W) +7
+-1 thru 12</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -508,22 +508,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
-      <td>Billy Horschel +10
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -6
@@ -537,6 +521,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
+      <td>Billy Horschel +10
+E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -556,22 +556,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
@@ -585,6 +569,22 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +5
 -2 thru 10</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -755,7 +755,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td>Matthew Fitzpatrick +4
-E thru 5</td>
+E thru 6</td>
       <td>Tony Finau +6
 +2 thru 4</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -774,8 +774,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -790,20 +790,20 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td>Adam Scott +11
 -1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -813,15 +813,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Patrick Cantlay(W) +6
--2 thru 11</td>
+      <td>Patrick Cantlay(W) +7
+-1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -845,31 +845,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout leftborder">Daniel Berger +7
+      <td>Daniel Berger +7
 E thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
       <td>Tony Finau +6
 +2 thru 4</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
