--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:12:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:13:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout">Tony Finau +6
+      <td class="greyout leftborder">Tony Finau +6
 +2 thru 4</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 5</td>
+E thru 6</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -230,8 +230,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -246,26 +246,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout">Tyrrell Hatton +15
 +6 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -281,6 +265,22 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
-      <td>Patrick Cantlay +6
--2 thru 11</td>
       <td>Tony Finau +6
 +2 thru 4</td>
+      <td>Patrick Cantlay +7
+-1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
