--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:14:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:14:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -213,7 +213,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Talor Gooch +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -375,7 +375,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -501,7 +501,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td>Talor Gooch +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
 -2 thru 10</td>
       <td class="greyout">Brooks Koepka
