--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:18:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:19:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -183,7 +183,7 @@ Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton +15
-+6 thru 13</td>
++6 thru 14</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -710,8 +710,8 @@ Not started</td>
 -3 thru 9</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Daniel Berger +7
-E thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +9
++2 thru 10</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -852,10 +852,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
-      <td>Daniel Berger +7
-E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td>Patrick Cantlay +7
 -1 thru 12</td>
+      <td class="greyout leftborder">Daniel Berger +9
++2 thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
