--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:19:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:19:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -164,10 +164,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Russell Henley +2
--5 thru 9</td>
-      <td class="greyout leftborder">Will Zalatoris +2
+      <td>Will Zalatoris +2
 Not started</td>
+      <td class="greyout leftborder">Russell Henley +3
+-4 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -661,7 +661,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td>Joaquin Niemann +4
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
