--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:19:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:20:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -614,8 +614,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 thru 11</td>
+      <td class="greyout leftborder">Bubba Watson +9
++1 thru 12</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
