--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:21:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:22:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -181,7 +181,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Viktor Hovland(W) +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tyrrell Hatton +15
 +6 thru 14</td>
       <td class="greyout">Sam Burns
@@ -247,7 +247,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -327,7 +327,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jon Rahm +5
 -2 thru 10</td>
     </tr>
@@ -341,7 +341,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 12</td>
       <td class="greyout">Xander Schauffele
@@ -389,7 +389,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -421,7 +421,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -469,7 +469,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
 -2 thru 10</td>
       <td class="greyout">Patrick Cantlay +7
@@ -483,7 +483,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
@@ -547,7 +547,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -599,7 +599,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Tiger Woods(W) +9
 +2 thru 10</td>
     </tr>
@@ -611,7 +611,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
       <td class="greyout leftborder">Bubba Watson +9
@@ -629,7 +629,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tiger Woods +9
 +2 thru 10</td>
       <td class="greyout">Gary Woodland
@@ -659,7 +659,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Joaquin Niemann +4
 E thru 7</td>
       <td class="greyout leftborder">Sam Burns
@@ -679,7 +679,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -723,7 +723,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td class="greyout leftborder">Sam Burns
@@ -739,7 +739,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -771,7 +771,7 @@ Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -787,7 +787,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland(W) +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -849,7 +849,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Cantlay +7
@@ -881,7 +881,7 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Reed +6
@@ -897,7 +897,7 @@ Missed Cut</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Cantlay +7
