--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:21:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:22:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -199,7 +199,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Joaquin Niemann +4
 E thru 7</td>
     </tr>
@@ -213,7 +213,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -229,7 +229,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -321,7 +321,7 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Reed +6
@@ -337,7 +337,7 @@ Missed Cut</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Cantlay +7
