--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:22:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:22:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -195,7 +195,7 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -325,7 +325,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 1</td>
       <td class="greyout">Jon Rahm +5
@@ -373,7 +373,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Marc Leishman +3
 E thru 1</td>
       <td class="greyout">Xander Schauffele
@@ -437,7 +437,7 @@ Not started</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tiger Woods +9
 +2 thru 10</td>
       <td class="greyout">Xander Schauffele
@@ -499,7 +499,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch +3
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
@@ -833,7 +833,7 @@ Missed Cut</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 10</td>
       <td>Patrick Cantlay +7
@@ -865,7 +865,7 @@ Missed Cut</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 10</td>
       <td>Patrick Cantlay +7
