--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:26:21 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:27:04 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 6</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -325,7 +325,7 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 11</td>
       <td>Patrick Reed +6
-+2 thru 4</td>
++2 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
