--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:28:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:29:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -374,8 +374,8 @@ Not started</td>
 Not started</td>
       <td>Hideki Matsuyama +2
 E thru 1</td>
-      <td class="greyout leftborder">Marc Leishman +3
-E thru 1</td>
+      <td class="greyout leftborder">Marc Leishman +4
++1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -805,7 +805,7 @@ Not started</td>
       <td>Patrick Cantlay +6
 -2 thru 13</td>
       <td>Adam Scott +11
--1 thru 14</td>
+-1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
