--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:36:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:37:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland(W) +3
 E thru 1</td>
-      <td class="greyout leftborder">Tyrrell Hatton +15
-+6 thru 14</td>
+      <td class="greyout leftborder">Tyrrell Hatton +16
++7 thru 15</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -614,8 +614,8 @@ Not started</td>
 E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
-      <td class="greyout leftborder">Bubba Watson +9
-+1 thru 12</td>
+      <td class="greyout leftborder">Bubba Watson +8
+E thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
