--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:38:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:39:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 6</td>
-      <td class="greyout">Patrick Cantlay +6
+      <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 13</td>
+      <td class="greyout">Tony Finau +6
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -285,15 +285,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Tony Finau +5
-+1 thru 6</td>
+      <td>Tony Finau +6
++2 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +9
 +2 thru 11</td>
       <td class="greyout">Brooks Koepka
@@ -332,22 +332,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Jon Rahm(W) +5
--2 thru 12</td>
-      <td>Tony Finau +5
-+1 thru 6</td>
-      <td>Patrick Cantlay +6
--2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">17</td>
       <td>Dustin Johnson +1
@@ -359,6 +343,22 @@ E thru 1</td>
       <td>Patrick Cantlay +6
 -2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">18</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Jon Rahm(W) +5
+-2 thru 12</td>
+      <td>Patrick Cantlay +6
+-2 thru 13</td>
+      <td>Tony Finau +6
++2 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
