--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:38:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:39:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,10 +262,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 6</td>
-      <td class="greyout">Patrick Cantlay +6
+      <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 13</td>
+      <td class="greyout">Tony Finau +6
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -684,22 +684,6 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">7</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +1
-Not started</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 7</td>
-      <td>Tony Finau +5
-+1 thru 6</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">8</td>
       <td>Cameron Smith -6
@@ -728,6 +712,22 @@ Not started</td>
 -2 thru 12</td>
       <td class="greyout leftborder">Daniel Berger +9
 +2 thru 11</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">8</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +1
+Not started</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 7</td>
+      <td>Tony Finau +6
++2 thru 7</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
-      <td>Tony Finau +5
-+1 thru 6</td>
       <td>Patrick Cantlay +6
 -2 thru 13</td>
+      <td>Tony Finau +6
++2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
