--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:39:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:40:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Talor Gooch +2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -467,7 +467,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Talor Gooch +2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Hideki Matsuyama +2
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
@@ -796,22 +796,6 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">11</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Dustin Johnson +1
-Not started</td>
-      <td>Patrick Cantlay +6
--2 thru 13</td>
-      <td>Adam Scott +11
--1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">11</td>
       <td>Justin Thomas -1
@@ -841,6 +825,22 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">13</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Dustin Johnson +1
+Not started</td>
+      <td>Patrick Cantlay +6
+-2 thru 13</td>
+      <td>Adam Scott +13
++1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
